Prevent text in masthead container from getting too close to logo

--- a/source/stylesheets/modules/_masthead.css.sass
+++ b/source/stylesheets/modules/_masthead.css.sass
@@ -13,6 +13,7 @@
   .masthead-container
     @extend .container
     max-width: 600px
+    min-width: 0
     padding:
       bottom: 4.5em
       top: 4.5em
